updated: LOG.debug(...,e) and switched to List.copyOf(...)
Signed-off-by: Preeti <35308865+pr9t@users.noreply.github.com>